<resources>
    <string name="app_name">Quiz App</string>
    <string name="header">Are you ready?</string>
    <string name="name">Please tell us who you are?</string>
    <string name="team">Please tell who is your favorite team?</string>
    <string name="question_1_header">question 1</string>
    <string name="question_2_header">question 2</string>
    <string name="question_3_header">question 1</string>
    <string name="question_4_header">question 2</string>
    <string name="question_5_header">question 3</string>
    <string name="question_6_header">question 4</string>
    <string name="question_7_header">question 5</string>
    <string name="question_8_header">question 6</string>
    <string name="question_9_header">question 7</string>
    <string name="question_10_header">question 8</string>
    <string name="question_1_question">What is Your name?</string>
    <string name="question_2_question">who was you favorite team?</string>
    <string name="question_3_question">Where occurred Euro 2004?</string>
    <string name="question_4_question">Who scored the most goals in Euro 2016?</string>
    <string name="question_5_question">Which national team won in second semi final in Euro 2016 tournament?</string>
    <string name="question_6_question">Which national team won Euro 2016 tournament?</string>
    <string name="question_7_question">Who was wounded in Euron 2016 final?</string>
    <string name="question_8_question">Which team has the most yellow cards?</string>
    <string name="question_9_question">Who are the teams who have risen semi Euro 2016?</string>
    <string name="question_10_question">Who are the teams who not croos first phase?</string>
    <string name="question_1_hint">Fill in your name</string>
    <string name="question_2_hint">Fill in your team</string>
    <string name="question_3_option_1">Greece</string>
    <string name="question_3_option_2">Bosnia</string>
    <string name="question_3_option_3">Netherlands</string>
    <string name="question_4_option_1">Gareth Bale</string>
    <string name="question_4_option_2">Antuan Grisman</string>
    <string name="question_4_option_3">Dimitry Paya</string>
    <string name="question_5_option_1">French</string>
    <string name="question_5_option_2">Germany</string>
    <string name="question_6_option_1">Portugal</string>
    <string name="question_6_option_2">French</string>
    <string name="question_7_option_1">Wayne Rooney</string>
    <string name="question_7_option_2">Mesut Özil</string>
    <string name="question_7_option_3">Cristiano Ronaldo</string>
    <string name="question_8_option_1">Italy</string>
    <string name="question_8_option_2">Russia</string>
    <string name="question_8_option_3">French</string>
    <string name="question_9_option_1">England</string>
    <string name="question_9_option_2">Portugal</string>
    <string name="question_9_option_3">Poland</string>
    <string name="question_9_option_4">Wales</string>
    <string name="question_10_option_1">Hungary</string>
    <string name="question_10_option_2">Romania</string>
    <string name="question_10_option_3">Ukraine</string>
    <string name="submit_button">Submit</string>
    <string name="be_nice">Hey! Please be nice and fill your name and favorite team. Thanks!</string>
    <string name="count_answer" formatted="false">Your score is %d / %d</string>
    <string name="good_answer" formatted="false">WooHoo, Well Done %1$s</string>


</resources>
